@@ -1,5 +1,6 @@
 SUBDIRS =
 dist_templates_DATA =	\
+	admin.html			\
 	base.html			\
 	index.html			\
 	new_item.html			\
