@@ -1,0 +1,22 @@
+<div id='administration-cell'>
+  <a title='Rename item' onclick='return false;' href=''>
+    <img src='/sjwebkit/common/images/famfamfam_icons/pencil.png' alt='Rename'/>
+  </a>
+  <a title='Delete item' onclick='return false;' href=''>
+    <img src='/medias/workflow/img/untake.png' alt='Delete'/>
+  </a>
+</div>
+
+<div id='rename_delete_category'>
+  <a title='Rename category' onclick='return false;' href=''>
+    <img src='/sjwebkit/common/images/famfamfam_icons/pencil.png' alt='Rename'/>
+  </a>
+  <a title='Delete category' onclick='return false;' href=''>
+    <img src='/medias/workflow/img/untake.png' alt='Delete'/>
+  </a>
+</div>
+
+<div id='create_box'>
+  <a title='Create item' onclick='' class='workflow_management'>Create item</a>
+  <a title='Create category' onclick='' class='workflow_management'>Create category</a>
+</div>
