@@ -21,6 +21,10 @@ var gl_workflowId = {{ workflow_id }};
 /* ***** */
 </script>
 
+<div id='switch-to-admin'><button>Switch to admin view</button></div>
+<div id='admin'>
+</div>
+
 {% if categories|length %}
 <!-- Progressbar and stats which are generated by javascript -->
 <div class="progress_workflow">
@@ -111,7 +115,7 @@ var gl_workflowId = {{ workflow_id }};
 			</div>
 			<div class='all_for_detail'>
 				<pre class='details_item'></pre>
-				<button onclick='return false;' class='edit_details'>Edit details</button>
+				<button onclick='return false;' class='edit_details hidden'>Edit details</button>
 				<div class='add_details'>
 					<h2>Edit details</h2>
 					<textarea class='textarea_edit_detail' rows='7' cols='75' name='new_details'></textarea><br />
