@@ -4,6 +4,7 @@ Version 0.4.0~dev
 	* Add 'copy workflow' feature.
 	* Add 'rename workflow' feature.
 	* Add 'create workflow' feature.
+	* Add 'edit workflow' feature.
 
 Version 0.3.2 Released on 2011/07/27
 
